# cli

./: Cargo.toml
src/: lib.rs  main.rs
src/commands/: connect.rs  contact.rs  login.rs  ls.rs  mod.rs  send.rs
src/context/: mod.rs
src/prompt/: mod.rs
