[package]
name = "packet_racers_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reedline-repl-rs = { version =  "1.0", feature = ["async"] }
reedline = { version = "0.19", feature = ["system_clipboard"] }
cli-prompts = "0.1"
